--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: "3.8"
 
 services:
   abiotic-server:
-    # 使用当前目录的 Dockerfile 构建 Ubuntu 24.04 + WineHQ 镜像
+    # 使用当前目录的 Dockerfile 构建 Ubuntu 24.04 + WineHQ 镜像 / Build Ubuntu 24.04 + WineHQ image from the local Dockerfile
     build: .
     container_name: abiotic-factor-server
     restart: unless-stopped
 
-    # 映射游戏文件和存档
+    # 映射游戏文件和存档 / Mount game files and save data
     volumes:
       - ./gamefiles:/server
       - ./data:/server/AbioticFactor/Saved
 
-    # 服务器参数（可按需修改）
+    # 服务器参数（可按需修改） / Server arguments (adjust as needed)
     environment:
       - MaxServerPlayers=6
       - Port=7777
@@ -22,12 +22,12 @@ services:
       - UsePerfThreads=true
       - NoAsyncLoadingThread=true
       - WorldSaveName=Cascade
-      # 首次安装或每次启动都检查更新时可以打开：
+      # 首次安装或每次启动都检查更新时可以打开： / Enable this for first install or update on every start:
       # - AutoUpdate=true
-      # 例如：自定义 Sandbox 配置：
+      # 例如：自定义 Sandbox 配置： / Example: custom Sandbox configuration:
       # - AdditionalArgs=-SandboxIniPath=Config/WindowsServer/Server1Sandbox.ini
 
-    # 开放 UDP 端口
+    # 开放 UDP 端口 / Expose UDP ports
     ports:
       - "7777:7777/udp"
       - "27015:27015/udp"
